# NoveltyModel

./: # Existing code imports and setup.py  main.py  pyproject.toml
data/processed/: process.data.py
data/raw/: DiscoveriesTimeline.csv  GlobalMilestones.csv  techAdvancements.csv
src/: main.py
src/data/raw/: GlobalCulturalShift.csv  HistoricalEvents.csv
src/models/: UAPAnalysis.py
